# calendarwebthing

./: .gitignore  Cargo.toml  watch1.sh
google_sync/: bun.lockb  google.js  package.json
src/: assignment.rs  job.rs  main.rs  manager.rs  network.rs
static/js/: main.js
templates/: assignments.html.hbs  index.html.hbs  jobs.html.hbs  layout.html.hbs
templates/assignments/: delete.html.hbs  edit.html.hbs  new.html.hbs  view.html.hbs
templates/jobs/: delete.html.hbs  edit.html.hbs  new.html.hbs  view.html.hbs
